# whisper.cpp

ggml/include/: ggml-eosl_common.h  ggml-eosl_host.h  ggml.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml.c
ggml/src/ggml-eosl_common/: device_memory.cpp  device_memory.hpp
ggml/src/ggml-eosl_host/: CMakeLists.txt  device_config.hpp  device_dma.cpp  ggml-eosl_host.cpp  host_debug.hpp  host_message.cpp  host_system.cpp  host_system.hpp  host_utils.cpp  host_utils.hpp
